<resources>
    <string name="app_name">Find The Killer</string>

    <!--    buttons text-->
    <string name="start">Start</string>
    <string name="guide">Guide</string>
    <string name="option">Option</string>
    <string name="quit">Quit</string>

    <!--    player name-->
    <string name="name">Name</string>

    <!--    lineup prompt-->
    <string name="prompt">There are no killer among them</string>
    <string name="skip_button">Skip</string>

    <!--    main game button text-->
    <string name="inspect">Inspect</string>
    <string name="guilty">Suspect</string>
    <string name="ask">Ask</string>
    <string name="next_button">Next</string>

    <!--    main game player status-->
    <string name="number_of_players">0</string>

    <!--    fragment player details-->
    <string name="result_prompt">Player is Eliminated!</string>

    <string name="name_indicator">Name:</string>
    <string name="player_name">Player</string>
    <string name="gender_indicator">Gender:</string>
    <string name="player_gender">Male</string>
    <string name="role_indicator">Role: </string>
    <string name="player_role">Family</string>

    <!--    game result texts-->
    <string name="menu_button">Menu</string>
    <string name="found_killers">You found nothing!</string>
    <string name="killer_list">There is no killer.</string>

<!--    fragment back buttons-->
    <string name="back_buttons">Back</string>

<!--    killed fragment-->
    <string name="player_killed_prompt">Player\'s corpse has been found!</string>
</resources>