<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/aftergameLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AftergameFragment"
    android:background="#414B65">

    <Button
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_button"
        android:textColor="#BAE6E6"
        android:backgroundTint="#171C37"
        android:fontFamily="@font/nightcat"
        android:layout_marginTop="20sp"
        android:layout_marginStart="20sp"
        android:paddingStart="30sp"
        android:paddingEnd="30sp"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/aftergamePrompt"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/found_killers"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/menuButton"
        android:layout_above="@+id/killerView"
        android:layout_marginTop="25sp"
        android:layout_marginBottom="25sp"
        android:textSize="50sp"
        android:textColor="#34D9F6"
        android:fontFamily="@font/nightcat"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/killerView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/killerText"
        android:layout_width="280sp"
        android:layout_height="wrap_content"
        android:text="@string/killer_list"
        android:textSize="30sp"
        android:textColor="#B2F2F4"
        android:layout_centerInParent="true"
        android:layout_marginTop="20sp"
        android:textAlignment="center"
        android:layout_below="@+id/killerView"/>

</RelativeLayout>